users-api/k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: users-api
  namespace: team16
spec:
  ports:
    - port: 8083
      protocol: TCP
      targetPort: 8083
  selector:
    app: users-api
